<resources>
    <string name="app_name">Log book Assistant</string>
    <string name="report_problem">Report problem</string>
    <string name="submit_issue">Submit issue</string>
    <string name="sign_in">Sign In</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="acc">Don\'t have an Account? Sign Up</string>
    <string name="problem_description">Problem Description</string>
    <string name="enter_the_problem_description">Enter the problem description</string>
    <string name="reset_password">Reset password</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="office_number">Office number</string>
    <string name="department">Department</string>
    <string name="view_posted_issues">View posted issues</string>
    <string name="issue_fixed">Issue fixed</string>
    <string name="view_reported_issues">View Reported Issues</string>
    <string name="view_all_resolved_issues">View All Resolved Issues</string>
    <string name="welcome_back_to_the_technician_main">Welcome back to the Technician Main</string>
    <string name="generate_logbook">Generate logBook</string>
    <string name="generate_a_log_book">Generate a log book</string>
    <string name="welcome_to_the_user_page">Welcome to the user page</string>
    <string name="report">Report problem</string>
    <string name="update_or_delete_problem">Update or Delete problem</string>
    <string name="update_problem">Update problem</string>
    <string name="delete_problem">Delete problem</string>
    <string name="update_reported_problems">Update reported problems</string>
    <string name="log_book_assistant">Log book Assistant</string>
    <string name="persal">Persal</string>
    <string name="supervisor_name">Supervisor name</string>
    <string name="issue">Issue</string>
    <string name="departments">Departments</string>
    <string name="issue_description">Issue description</string>
    <string-array name="issueSpinner">
        <item>Printer problem</item>
        <item>Phone problem</item>
        <item>Email problem</item>
        <item>Password problem</item>
        <item>Network problem</item>
    </string-array>
    <string-array name="departmentSpinner">
        <item>Emergency Department</item>
        <item>Surgery Department (Operating Theater)</item>
        <item>Outpatient Department</item>
        <item>Inpatient Department</item>
        <item>Intensive Care Unit (ICU)</item>
        <item>Radiology Department</item>
        <item>Neurology Department</item>
        <item>Psychiatry Department</item>
        <item>Cardiology Department</item>
        <item>Human Resources Department</item>
        <item>Management Department</item>
        <item>Laboratory Department</item>
        <item>Pharmacy Department</item>
        <item>Rehabilitation</item>
    </string-array>
</resources>