<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEF4ED"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Create_Account"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
  <TextView
      android:layout_width="wrap_content"
      android:textColor="#7F00FC"
      android:layout_height="65dp"
      android:layout_marginTop="30dp"
      android:textSize="40sp"
      android:text="@string/create_account"
      android:textStyle="bold"
      android:layout_centerHorizontal="true"
      />

  <EditText
      android:id="@+id/name"
      android:drawableStart="@drawable/person"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:layout_marginTop="100dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:padding="10dp"
      android:background="@drawable/edt_style"
      android:inputType="textPersonName"
      android:drawablePadding="5dp"
      android:hint="@string/first_name"
      />
  <EditText
      android:id="@+id/surname"
      android:layout_width="match_parent"
      android:drawableStart="@drawable/person"
      android:layout_height="48dp"
      android:layout_marginTop="20dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:layout_marginStart="20dp"
      android:layout_below="@id/name"
      android:background="@drawable/edt_style"
      android:layout_marginEnd="20dp"
      android:padding="10dp"
      android:inputType="textPersonName"
      android:drawablePadding="5dp"
      android:hint="@string/last_name"
      />
  <EditText
      android:id="@+id/Phone"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:layout_marginTop="20dp"
      android:drawableStart="@drawable/phone"
      android:layout_marginStart="20dp"
      android:layout_below="@id/surname"
      android:layout_marginEnd="20dp"
      android:padding="10dp"
      android:drawablePadding="5dp"
      android:background="@drawable/edt_style"
      android:inputType="phone"
      android:hint="@string/phone_number"
      />
  <EditText
      android:id="@+id/persal"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_below="@id/Phone"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:background="@drawable/edt_style"
      android:padding="10dp"
      android:drawableStart="@drawable/persal"
      android:inputType="text"
      android:drawablePadding="5dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:hint="@string/persal"
      />
  <EditText
      android:id="@+id/supervisor"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_below="@id/persal"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:background="@drawable/edt_style"
      android:padding="10dp"
      android:drawableStart="@drawable/person"
      android:inputType="textEmailAddress"
      android:drawablePadding="5dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:hint="@string/supervisor_name"
      />
  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_below="@id/supervisor"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:background="@drawable/edt_style"
      android:padding="10dp"
      android:drawableStart="@drawable/email"
      android:inputType="textEmailAddress"
      android:drawablePadding="5dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:hint="@string/email_address"
      />


  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_below="@id/email"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:background="@drawable/edt_style"
      android:layout_marginEnd="20dp"
      android:padding="10dp"
      android:inputType="text"
      android:drawablePadding="5dp"
      android:hint="@string/password"
      android:drawableStart="@drawable/password"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      tools:ignore="TextFields" />
  <EditText
      android:id="@+id/c_password"
      android:drawableStart="@drawable/password"
      android:layout_width="match_parent"
      android:layout_height="48dp"
      android:layout_below="@id/password"
      android:background="@drawable/edt_style"
      android:layout_marginTop="20dp"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:padding="10dp"
      android:inputType="text"
      android:drawablePadding="5dp"
      android:textColor="#000000"
      android:textColorHint="#123E53"
      android:hint="@string/confirm_password"
      tools:ignore="LabelFor,TextFields" />

  <Button
      android:id="@+id/submit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/c_password"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="20dp"
      app:cornerRadius="2dp"
      android:text="@string/submit" />
</RelativeLayout>
</ScrollView>