<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#EEF4ED"
    android:backgroundTint="#EEF4ED"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/newlo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:text="@string/sign_in"
        android:layout_marginTop="250dp"
        android:textColor="#7F00FC"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/persal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:drawableStart="@drawable/persal"
        android:layout_marginTop="350dp"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:textColorHint="#555555"
        android:textColor="#5B7C99"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:drawablePadding="5dp"
        android:background="@drawable/edt_style"
        android:hint="Persal"
        />
    <EditText
        android:id="@+id/password"
        android:drawableStart="@drawable/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColorHint="#555555"
        android:textColor="#5B7C99"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edt_style"
        android:inputType="textVisiblePassword"
        android:padding="10dp"
        android:layout_below="@id/persal"
        android:drawablePadding="5dp"
        android:hint="@string/password"
        tools:ignore="TextFields" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_below="@id/forgotPassword"
        android:id="@+id/submit"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cornerRadius="2dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotPassword"
        android:textColor="#FF6B35"
        android:layout_below="@id/password"
        android:textSize="19sp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:layout_marginStart="245dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotPassword"
        android:text="@string/acc"
        android:textColor="#FF6B35"
        android:layout_marginTop="70dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:id="@+id/createAccount"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>